Isolate adoptium deb repos from snapshot repos
This keeps the system from updating snapshots when it doesn't
need to.

This also adds an updater for the adoptium based deb packages,
but applies to any external repo file that doesn't include
snapshots.debian.org

Signed-off-by: Appu Goundan <appu@google.com>

--- a/private/repos/deb/deb.MODULE.bazel
+++ b/private/repos/deb/deb.MODULE.bazel
@@ -3,6 +3,7 @@
 REPOS = [
     "trixie",
     "trixie_java",
+    "trixie_adoptium",
     "bookworm",
     "bookworm_java",
     "bookworm_python",
@@ -23,7 +24,7 @@ apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
     for repo in REPOS
 ]
 
-use_repo(apt, "bookworm", "bookworm_java", "bookworm_python", "trixie", "trixie_java")
+use_repo(apt, "bookworm", "bookworm_java", "bookworm_python", "trixie", "trixie_java", "trixie_adoptium")
 
 ### VERSIONS HUB REPO ###
 version = use_extension("//private/extensions:version.bzl", "version")
