--- a/python3/BUILD
+++ b/python3/BUILD
@@ -57,30 +57,30 @@ DISTRO_VERSION = {
         # Use UTF-8 encoding for file system: match modern Linux
         env = {"LANG": "C.UTF-8"},
         tars = [
-            deb.package(arch, distro, "libbz2-1.0"),
-            deb.package(arch, distro, "libdb5.3"),
-            deb.package(arch, distro, "libexpat1"),
-            deb.package(arch, distro, "liblzma5"),
-            deb.package(arch, distro, "libsqlite3-0"),
-            deb.package(arch, distro, "libuuid1"),
-            deb.package(arch, distro, "libncursesw6"),
-            deb.package(arch, distro, "libtinfo6"),
-            deb.package(arch, distro, "python3-distutils"),
-            deb.package(arch, distro, "zlib1g"),
-            deb.package(arch, distro, "libcom-err2"),
-            deb.package(arch, distro, "libcrypt1"),
-            deb.package(arch, distro, "libgssapi-krb5-2"),
-            deb.package(arch, distro, "libk5crypto3"),
-            deb.package(arch, distro, "libkeyutils1"),
-            deb.package(arch, distro, "libkrb5-3"),
-            deb.package(arch, distro, "libkrb5support0"),
-            deb.package(arch, distro, "libnsl2"),
-            deb.package(arch, distro, "libreadline8"),
-            deb.package(arch, distro, "libtirpc3"),
-            deb.package(arch, distro, "libffi8"),
-            deb.package(arch, distro, "libpython3.11-minimal"),
-            deb.package(arch, distro, "libpython3.11-stdlib"),
-            deb.package(arch, distro, "python3.11-minimal"),
+            deb.package(arch, distro, "libbz2-1.0", "python"),
+            deb.package(arch, distro, "libdb5.3", "python"),
+            deb.package(arch, distro, "libexpat1", "python"),
+            deb.package(arch, distro, "liblzma5", "python"),
+            deb.package(arch, distro, "libsqlite3-0", "python"),
+            deb.package(arch, distro, "libuuid1", "python"),
+            deb.package(arch, distro, "libncursesw6", "python"),
+            deb.package(arch, distro, "libtinfo6", "python"),
+            deb.package(arch, distro, "python3-distutils", "python"),
+            deb.package(arch, distro, "zlib1g", "python"),
+            deb.package(arch, distro, "libcom-err2", "python"),
+            deb.package(arch, distro, "libcrypt1", "python"),
+            deb.package(arch, distro, "libgssapi-krb5-2", "python"),
+            deb.package(arch, distro, "libk5crypto3", "python"),
+            deb.package(arch, distro, "libkeyutils1", "python"),
+            deb.package(arch, distro, "libkrb5-3", "python"),
+            deb.package(arch, distro, "libkrb5support0", "python"),
+            deb.package(arch, distro, "libnsl2", "python"),
+            deb.package(arch, distro, "libreadline8", "python"),
+            deb.package(arch, distro, "libtirpc3", "python"),
+            deb.package(arch, distro, "libffi8", "python"),
+            deb.package(arch, distro, "libpython3.11-minimal", "python"),
+            deb.package(arch, distro, "libpython3.11-stdlib", "python"),
+            deb.package(arch, distro, "python3.11-minimal", "python"),
             ":python_aliases_%s" % distro,
         ],
     )
