Move configuration around
- more convenient changes
- root BUILD is tied to individual image config
- add check to see if any diffs in build config occur (tag:rule)

Signed-off-by: Appu Goundan <appu@google.com>

--- a/base/BUILD
+++ b/base/BUILD
@@ -1,26 +1,22 @@
 load(":base.bzl", "base_image", "base_image_index", "base_nossl_image", "base_nossl_image_index")
-load("//:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
-load("//:checksums.bzl", "ARCHITECTURES")
+load(":config.bzl", "BASE_ARCHITECTURES", "BASE_DISTROS", "BASE_NOSSL_PACKAGES", "BASE_PACKAGES")
 
 package(default_visibility = ["//visibility:public"])
-
-BASE_DISTROS = DISTROS + PREVIEW_DISTROS
-
-BASE_ARCHITECTURES = ARCHITECTURES
 
 # base nossl
 [
     base_nossl_image(
         arch = arch,
         distro = distro,
+        packages = BASE_NOSSL_PACKAGES[distro],
     )
     for distro in BASE_DISTROS
-    for arch in BASE_ARCHITECTURES
+    for arch in BASE_ARCHITECTURES[distro]
 ]
 
 [
     base_nossl_image_index(
-        architectures = BASE_ARCHITECTURES,
+        architectures = BASE_ARCHITECTURES[distro],
         distro = distro,
     )
     for distro in BASE_DISTROS
@@ -32,14 +28,15 @@ BASE_ARCHITECTURES = ARCHITECTURES
     base_image(
         arch = arch,
         distro = distro,
+        packages = BASE_PACKAGES[distro],
     )
     for distro in BASE_DISTROS
-    for arch in BASE_ARCHITECTURES
+    for arch in BASE_ARCHITECTURES[distro]
 ]
 
 [
     base_image_index(
-        architectures = BASE_ARCHITECTURES,
+        architectures = BASE_ARCHITECTURES[distro],
         distro = distro,
     )
     for distro in BASE_DISTROS
