--- a/examples/nodejs/BUILD
+++ b/examples/nodejs/BUILD
@@ -4,10 +4,18 @@
 load("@container_structure_test//:defs.bzl", "container_structure_test")
 load("@rules_oci//oci:defs.bzl", "oci_image")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//:checksums.bzl", ARCHITECTURES = "BASE_ARCHITECTURES")
-load("//:distro.bzl", "DISTROS")
 
 package(default_visibility = ["//visibility:public"])
+
+ARCHITECTURES = [
+    "amd64",
+    "arm64",
+]
+
+DISTROS = [
+    "debian12",
+    "debian13",
+]
 
 # These examples are adapted from:
 # https://howtonode.org/hello-node
