--- a/examples/nonroot/BUILD
+++ b/examples/nonroot/BUILD
@@ -6,7 +6,7 @@ load("@rules_go//go:def.bzl", "go_binary")
 load("@rules_distroless//distroless:defs.bzl", "home", "passwd")
 load("@rules_oci//oci:defs.bzl", "oci_image")
 load("@rules_pkg//:pkg.bzl", "pkg_tar")
-load("//:distro.bzl", "DISTROS")
+load("//:distro.bzl", DISTROS = "ALL_DISTROS")
 
 # Create a passwd file and home directory with a nonroot user and uid.
 passwd(
