--- a/experimental/busybox/BUILD
+++ b/experimental/busybox/BUILD
@@ -1,23 +1,13 @@
-load("//:checksums.bzl", "ARCHITECTURES")
+load("//:distro.bzl", BUSYBOX_ARCHITECTURES = "ALL_ARCHITECTURES")
 load(":commands.bzl", "busybox_layer")
 
 package(default_visibility = ["//static:__subpackages__"])
 
-# This works for all architectures because it is just files.
-# Ppc64le/Arm/Arm64/Amd64/s390x needs special case as there is no direct working binary file available.
-SPECIAL_CASE_ARCH = [
-    "ppc64le",
-    "arm",
-    "arm64",
-    "amd64",
-    "s390x",
-]
-
 [
     busybox_layer(
         name = "busybox_" + arch,
-        busybox = "@busybox_" + arch + "//:file" if arch in SPECIAL_CASE_ARCH else "@busybox_" + arch + "//file",
+        busybox = "@busybox_" + arch + "//:file",
         compress = "gzip",
     )
-    for arch in ARCHITECTURES
+    for arch in BUSYBOX_ARCHITECTURES
 ]
