--- a/python3/BUILD
+++ b/python3/BUILD
@@ -1,11 +1,7 @@
-load("//:checksums.bzl", "BASE_ARCHITECTURES")
+load(":config.bzl", "PYTHON_ARCHITECTURES", "PYTHON_DISTROS")
 load(":python.bzl", "python3_image", "python3_image_index")
 
 package(default_visibility = ["//visibility:public"])
-
-PYTHON_DISTROS = ["debian12"]
-
-PYTHON_ARCHITECTURES = BASE_ARCHITECTURES
 
 [
     python3_image(
@@ -13,12 +9,12 @@ PYTHON_ARCHITECTURES = BASE_ARCHITECTURES
         distro = distro,
     )
     for distro in PYTHON_DISTROS
-    for arch in PYTHON_ARCHITECTURES
+    for arch in PYTHON_ARCHITECTURES[distro]
 ]
 
 [
     python3_image_index(
-        architectures = PYTHON_ARCHITECTURES,
+        architectures = PYTHON_ARCHITECTURES[distro],
         distro = distro,
     )
     for distro in PYTHON_DISTROS
