--- a/static/BUILD
+++ b/static/BUILD
@@ -1,12 +1,7 @@
 load(":static.bzl", "static_image", "static_image_index")
-load("//:distro.bzl", "DISTROS", "PREVIEW_DISTROS")
-load("//:checksums.bzl", "ARCHITECTURES")
+load(":config.bzl", "STATIC_ARCHITECTURES", "STATIC_DISTROS")
 
 package(default_visibility = ["//visibility:public"])
-
-STATIC_DISTROS = DISTROS + PREVIEW_DISTROS
-
-STATIC_ARCHITECTURES = ARCHITECTURES
 
 [
     static_image(
@@ -14,12 +9,12 @@ STATIC_ARCHITECTURES = ARCHITECTURES
         distro = distro,
     )
     for distro in STATIC_DISTROS
-    for arch in STATIC_ARCHITECTURES
+    for arch in STATIC_ARCHITECTURES[distro]
 ]
 
 [
     static_image_index(
-        architectures = STATIC_ARCHITECTURES,
+        architectures = STATIC_ARCHITECTURES[distro],
         distro = distro,
     )
     for distro in STATIC_DISTROS
