--- a/private/repos/deb/trixie.yaml
+++ b/private/repos/deb/trixie.yaml
@@ -26,9 +26,11 @@ packages:
   - openssl
   - tzdata
   - media-types
+  - zlib1g
+  - libzstd1
+  - openssl-provider-legacy
   # c++
   - gcc-14-base
   - libgcc-s1
   - libgomp1
   - libstdc++6
-  - zlib1g
