Adjust output of changed images on forked PRs
Signed-off-by: Appu Goundan <appu@google.com>

--- a/.github/workflows/image-check.yaml
+++ b/.github/workflows/image-check.yaml
@@ -11,7 +11,7 @@ concurrency:
 
 permissions:
   pull-requests: write
-  
+
 jobs:
   diff:
     runs-on: distroless-ci-large-ubuntu-22.04
@@ -32,7 +32,7 @@ jobs:
 
       - name: Fetch
         run: |
-          for i in $(seq 10); do 
+          for i in $(seq 10); do
             bazel --bazelrc=$GITHUB_WORKSPACE/.github/workflows/ci.bazelrc cquery 'attr(tags, "amd64", ...)' && break
             sleep 10;
           done
@@ -71,9 +71,11 @@ jobs:
 
       - name: Write diff to job output for forks
         if: ${{ github.event.pull_request.head.repo.fork && steps.diff.outputs.changed_targets }}
+        env:
+          CHANGED: ${{ steps.diff.outputs.changed_targets }}
         run: |
           echo "This pull request has modified the following images:"
-          echo ${{ steps.diff.outputs.changed_targets }}
+          echo "$CHANGED"
 
       - uses: peter-evans/find-comment@v4
         id: fc
