--- a/common/BUILD.bazel
+++ b/common/BUILD.bazel
@@ -2,7 +2,7 @@ load("@aspect_bazel_lib//lib:tar.bzl", "tar")
 load("@rules_distroless//distroless:defs.bzl", "cacerts", "group", "home", "locale", "os_release", "passwd")
 load("//:distro.bzl", "ALL_ARCHITECTURES", "ALL_DISTROS", "VERSIONS")
 load("//private/util:deb.bzl", "deb")
-load(":variables.bzl", "MTIME", "NOBODY", "NONROOT", "OS_RELEASE", "ROOT", "quote")
+load(":variables.bzl", "NOBODY", "NONROOT", "OS_RELEASE", "ROOT", "quote")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -30,7 +30,7 @@ tar(
         "gnutar",
     ],
     compress = "gzip",
-    mtree = ["./tmp gname=root uname=root time=1501783453.0 mode=1777 gid=0 uid=0 type=dir"],
+    mtree = ["./tmp gname=root uname=root time=0.0 mode=1777 gid=0 uid=0 type=dir"],
 )
 
 [
@@ -43,7 +43,6 @@ tar(
             ))
             for (key, value) in OS_RELEASE.items()
         },
-        time = MTIME,
     )
     for (dist, codename, version) in VERSIONS
 ]
@@ -53,7 +52,6 @@ tar(
         name = "locale_%s_%s" % (distro, arch),
         charset = "C.utf8",
         package = deb.data(arch, distro, "libc-bin"),
-        time = MTIME,
     )
     for arch in COMMON_ARCHITECTURES
     for distro in COMMON_DISTROS
@@ -63,7 +61,6 @@ tar(
     cacerts(
         name = "cacerts_%s_%s" % (distro, arch),
         package = deb.data(arch, distro, "ca-certificates"),
-        time = MTIME,
     )
     for arch in COMMON_ARCHITECTURES
     for distro in COMMON_DISTROS
@@ -99,7 +96,6 @@ group(
             "password": "x",
         },
     ],
-    time = MTIME,
 )
 
 passwd(
