--- a/private/repos/deb/deb.MODULE.bazel
+++ b/private/repos/deb/deb.MODULE.bazel
@@ -4,6 +4,7 @@ REPOS = [
     "trixie",
     "trixie_java",
     "trixie_adoptium",
+    "trixie_python",
     "bookworm",
     "bookworm_java",
     "bookworm_python",
@@ -24,7 +25,7 @@ apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
     for repo in REPOS
 ]
 
-use_repo(apt, "bookworm", "bookworm_java", "bookworm_python", "trixie", "trixie_java", "trixie_adoptium")
+use_repo(apt, "bookworm", "bookworm_java", "bookworm_python", "trixie", "trixie_java", "trixie_adoptium", "trixie_python")
 
 ### VERSIONS HUB REPO ###
 version = use_extension("//private/extensions:version.bzl", "version")
