--- a/python3/BUILD
+++ b/python3/BUILD
@@ -1,4 +1,4 @@
-load(":config.bzl", "PYTHON_ARCHITECTURES", "PYTHON_DISTROS")
+load(":config.bzl", "PYTHON_ARCHITECTURES", "PYTHON_DISTROS", "PYTHON_PACKAGES")
 load(":python.bzl", "python3_image", "python3_image_index")
 
 package(default_visibility = ["//visibility:public"])
@@ -7,6 +7,7 @@ package(default_visibility = ["//visibility:public"])
     python3_image(
         arch = arch,
         distro = distro,
+        packages = PYTHON_PACKAGES[distro],
     )
     for distro in PYTHON_DISTROS
     for arch in PYTHON_ARCHITECTURES[distro]
