--- a/examples/go/BUILD
+++ b/examples/go/BUILD
@@ -1,7 +1,7 @@
 # Public notice: this file is for internal documentation, testing, and
 # reference only. Note that repo maintainers can freely change any part of the
 # repository code at any time.
-load("@rules_oci//oci:defs.bzl", "oci_tarball")
+load("@rules_oci//oci:defs.bzl", "oci_load")
 load("//private/oci:defs.bzl", "go_image")
 
 package(default_visibility = ["//visibility:public"])
@@ -16,7 +16,7 @@ go_image(
 # bazel build //examples/go:tarball
 # podman load -i bazel-bin/examples/go/tarball/tarball.tar
 # podman run localhost/distroless/examples/go:latest
-oci_tarball(
+oci_load(
     name = "tarball",
     image = ":go_example",
     repo_tags = ["distroless/examples/go:latest"],
