--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -11,9 +11,10 @@ bazel_dep(name = "rules_pkg", version = "1.1.0")
 bazel_dep(name = "rules_rust", version = "0.63.0")
 bazel_dep(name = "container_structure_test", version = "1.19.1")
 bazel_dep(name = "rules_oci", version = "2.2.7")
-bazel_dep(name = "rules_distroless", version = "0.5.3")
+bazel_dep(name = "rules_distroless", version = "0.6.1")
 bazel_dep(name = "rules_python", version = "1.5.3")
 bazel_dep(name = "rules_cc", version = "0.2.0")
+bazel_dep(name = "pigz", version = "2.8")
 
 ### OCI ###
 # Note: rules_oci registers toolchains in its MODULE.bazel
