--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,17 +4,16 @@ module(name = "distroless")
 
 bazel_dep(name = "bazel_skylib", version = "1.8.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
+bazel_dep(name = "tar.bzl", version = "0.5.1")
 bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "rules_go", version = "0.57.0")
 bazel_dep(name = "gazelle", version = "0.38.0")
-bazel_dep(name = "rules_pkg", version = "1.1.0")
 bazel_dep(name = "rules_rust", version = "0.63.0")
 bazel_dep(name = "container_structure_test", version = "1.19.1")
 bazel_dep(name = "rules_oci", version = "2.2.7")
 bazel_dep(name = "rules_distroless", version = "0.6.2")
 bazel_dep(name = "rules_python", version = "1.5.3")
 bazel_dep(name = "rules_cc", version = "0.2.0")
-bazel_dep(name = "pigz", version = "2.8")
 
 ### OCI ###
 # Note: rules_oci registers toolchains in its MODULE.bazel
