--- a/static/BUILD
+++ b/static/BUILD
@@ -1,7 +1,21 @@
+load("//private/util:tar.bzl", "tar")
 load(":static.bzl", "static_image", "static_image_index")
 load(":config.bzl", "STATIC_ARCHITECTURES", "STATIC_DISTROS")
 
 package(default_visibility = ["//visibility:public"])
+
+tar(
+    name = "nsswitch",
+    srcs = ["nsswitch.conf"],
+    args = [
+        "--format",
+        "gnutar",
+        "-b",
+        "20",
+    ],
+    extension = "tar",
+    mtree = ["etc/nsswitch.conf uid=0 gid=0 uname=root gname=root mode=0644 time=1514722362 type=file content=$(location nsswitch.conf)"],
+)
 
 [
     static_image(
