Add java17 to debian13
Signed-off-by: Appu Goundan <appu@google.com>

--- a/private/repos/deb/trixie_adoptium.yaml
+++ b/private/repos/deb/trixie_adoptium.yaml
@@ -13,6 +13,8 @@ archs:
   - ppc64el
 
 packages:
+  - temurin-17-jre
+  - temurin-17-jdk
   - temurin-21-jre
   - temurin-21-jdk
   - temurin-25-jre
