--- a/java/testdata/java17_debian13.yaml
+++ b/java/testdata/java17_debian13.yaml
@@ -1,13 +1,13 @@
 schemaVersion: "2.0.0"
 commandTests:
   - name: java
-    command: "/usr/lib/jvm/temurin-25-jre-amd64/bin/java"
+    command: "/usr/lib/jvm/temurin-17-jre-amd64/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "25.0.2"']
+    expectedError: ['openjdk version "17.0.18']
   - name: java-symlink
     command: "/usr/bin/java"
     args: ["-version"]
-    expectedError: ['openjdk version "25.0.2"']
+    expectedError: ['openjdk version "17.0.18']
 fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
@@ -17,7 +17,7 @@ fileExistenceTests:
     permissions: 'Lrwxrwxrwx'
     shouldExist: true
   - name: certs
-    path: "/usr/lib/jvm/temurin-25-jre-amd64/lib/security/cacerts"
+    path: "/usr/lib/jvm/temurin-17-jre-amd64/lib/security/cacerts"
     permissions: 'Lrwxrwxrwx'
     shouldExist: true
   - name: no-busybox
@@ -27,17 +27,17 @@ fileExistenceTests:
     path: "/bin/sh"
     shouldExist: false
   - name: no-javac
-    path: "/usr/lib/jvm/temurin-25-jre-amd64/bin/javac"
+    path: "/usr/lib/jvm/temurin-17-jre-amd64/bin/javac"
     shouldExist: false
   - name: jexec-executable
-    path: "/usr/lib/jvm/temurin-25-jre-amd64/lib/jexec"
+    path: "/usr/lib/jvm/temurin-17-jre-amd64/lib/jexec"
     shouldExist: true
     isExecutableBy: "any"
   - name: jspawnhelper-executable
-    path: "/usr/lib/jvm/temurin-25-jre-amd64/lib/jspawnhelper"
+    path: "/usr/lib/jvm/temurin-17-jre-amd64/lib/jspawnhelper"
     shouldExist: true
     isExecutableBy: "any"
 metadataTest:
   envVars:
     - key: 'JAVA_VERSION'
-      value: '25.0.2'
+      value: '17.0.18'
